[gd_scene load_steps=5 format=3 uid="uid://bbktj3ub3ye7q"]

[ext_resource type="Script" uid="uid://cmin0y1wee6qa" path="res://scripts/ui/hud.gd" id="1_0mwgc"]
[ext_resource type="Texture2D" uid="uid://brjsorqeq34yh" path="res://icon.svg" id="2_hqnrr"]
[ext_resource type="PackedScene" uid="uid://c8k2vxm3n4qwe" path="res://scenes/ui/minimap.tscn" id="3_minimap"]
[ext_resource type="PackedScene" uid="uid://dhv0kemuqg3lj" path="res://scenes/ui/build_menu.tscn" id="4_8qguk"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0mwgc")

[node name="ResourcePanel" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcePanel"]
clip_contents = true
layout_mode = 2

[node name="FoodContainer" type="HBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="FoodIcon" type="TextureRect" parent="ResourcePanel/HBoxContainer/FoodContainer"]
layout_mode = 2
texture = ExtResource("2_hqnrr")

[node name="FoodAmount" type="Label" parent="ResourcePanel/HBoxContainer/FoodContainer"]
layout_mode = 2
text = "cibo"

[node name="WoodContainer" type="HBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="WoodIcon" type="TextureRect" parent="ResourcePanel/HBoxContainer/WoodContainer"]
layout_mode = 2
texture = ExtResource("2_hqnrr")

[node name="WoodAmount" type="Label" parent="ResourcePanel/HBoxContainer/WoodContainer"]
layout_mode = 2
text = "legno"

[node name="GoldContainer" type="HBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="GoldIcon" type="TextureRect" parent="ResourcePanel/HBoxContainer/GoldContainer"]
layout_mode = 2
texture = ExtResource("2_hqnrr")

[node name="GoldAmount" type="Label" parent="ResourcePanel/HBoxContainer/GoldContainer"]
layout_mode = 2
text = "gold"

[node name="UnitInfoPanel" type="PanelContainer" parent="."]
offset_top = 137.0
offset_right = 41.0
offset_bottom = 218.0

[node name="VBoxContainer" type="VBoxContainer" parent="UnitInfoPanel"]
layout_mode = 2

[node name="UnitName" type="Label" parent="UnitInfoPanel/VBoxContainer"]
layout_mode = 2
text = "unita"

[node name="HealthBar" type="ProgressBar" parent="UnitInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="UnitStats" type="Label" parent="UnitInfoPanel/VBoxContainer"]
layout_mode = 2
text = "test"

[node name="Minimap" parent="." instance=ExtResource("3_minimap")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -210.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="BuildMenu" parent="." instance=ExtResource("4_8qguk")]
